# remproject

./: Doxyfile  INSTALL  INSTALL.txt  LIBS  LICENSE  LICENSE.txt  README  README.md  README.txt
samples/: simple.rem
src/: CMakeLists.txt
src/controller/: Controller.cpp  Controller.h
src/controllers/: Controller.cpp  Controller.h  FileController.cpp  FileController.h
src/metamodel/: Actor.cpp  Actor.h  Container.h  Diagram.cpp  Diagram.h  Element.cpp  Element.h  Member.cpp  Member.h  Project.cpp  Project.h  UseCaseDiagram.cpp  UseCaseDiagram.h  classdiagram.cpp  classdiagram.h  diagram.cpp  diagram.h  element.cpp  element.h  note.cpp  note.h  project.cpp  project.h  property.cpp  property.h  sequencediagram.cpp  sequencediagram.h  usecasediagram.cpp  usecasediagram.h
src/notifications/: ActiveWindowStatusChanged.cpp  ActiveWindowStatusChanged.h  ArrowCanvasClicked.cpp  ArrowCanvasClicked.h  ArrowCanvasClickedNotification.cpp  ArrowCanvasClickedNotification.h  DeleteSelectedFigures.cpp  DeleteSelectedFigures.h  DiagramToggleGrid.cpp  DiagramToggleGrid.h  DiagramToggleGridNotification.cpp  DiagramToggleGridNotification.h  ExportDiagramAsPNG.cpp  ExportDiagramAsPNG.h  ExportDiagramAsPNGNotification.cpp  ExportDiagramAsPNGNotification.h  FigureChanged.cpp  FigureChanged.h  FigureMoved.cpp  FigureMoved.h  FigureMovedNotification.cpp  FigureMovedNotification.h  FigureSelected.cpp  FigureSelected.h  FigureSelectedNotification.cpp  FigureSelectedNotification.h  NewDiagramAdded.cpp  NewDiagramAdded.h  NewFigureAdded.cpp  NewFigureAdded.h  NewLineAdded.cpp  NewLineAdded.h  NewObjectAdded.cpp  NewObjectAdded.h  NewProjectCreated.cpp  NewProjectCreated.h  NewUseCaseDiagramAdded.cpp  NewUseCaseDiagramAdded.h  ProjectFileOpened.cpp  ProjectFileOpened.h  (+8 more)
src/storage/: ActiveRecord.h  AnyProperty.cpp  AnyProperty.h  AnyPropertyMap.cpp  AnyPropertyMap.h  BelongsTo.h  FindConditions.cpp  FindConditions.h  HasMany.h  None.cpp  None.h  Persistable.cpp  Persistable.h  Property.h  SQLiteWrapper.cpp  SQLiteWrapper.h
src/tests/: ActiveRecordTest.cpp  ActiveRecordTest.h  AnyPropertyMapTest.cpp  AnyPropertyMapTest.h  ControllerTest.cpp  ControllerTest.h  DiagramTest.cpp  DiagramTest.h  ElementTest.cpp  ElementTest.h  FileControllerTest.cpp  FileControllerTest.h  ProjectTest.cpp  ProjectTest.h  PropertyTest.cpp  PropertyTest.h  SQLiteWrapperTest.cpp  SQLiteWrapperTest.h  main.cpp
src/ui/: Actor.cpp  Actor.h  ActorFigure.cpp  ActorFigure.h  ActorToolbarButton.cpp  ActorToolbarButton.h  Application.cpp  Application.h  ArrowCanvas.cpp  ArrowCanvas.h  ArrowCanvasClickedNotification.cpp  ArrowCanvasClickedNotification.h  ArrowFigure.cpp  ArrowFigure.h  ArrowToolbarButton.cpp  ArrowToolbarButton.h  CommandDelegate.cpp  CommandDelegate.h  ContentComponent.cpp  ContentComponent.h  DiagramComponent.cpp  DiagramComponent.h  DiagramToggleGridNotification.cpp  DiagramToggleGridNotification.h  DiagramToolbar.cpp  DiagramToolbar.h  ExportDiagramAsPNGNotification.cpp  ExportDiagramAsPNGNotification.h  Figure.cpp  Figure.h  FigureLassoSource.cpp  FigureLassoSource.h  FigureMovedNotification.cpp  FigureMovedNotification.h  FigureSelectedNotification.cpp  FigureSelectedNotification.h  LineFigure.cpp  LineFigure.h  LineToolbarButton.cpp  LineToolbarButton.h  (+38 more)
src/utility/: Property.h  Singleton.h
